--- a/src/app/styles/page.module.css
+++ b/src/app/styles/page.module.css
@@ -18,7 +18,7 @@
 
 body {
   font-family: var(--font-geist-sans);
-  background-color: #f8f9fa;
+  background: #89CFF0;
   color: #333;
   margin: 0;
   padding: 0;
@@ -174,7 +174,6 @@ a.secondary {
   flex-shrink: 0;
 }
 
-/* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   a.primary:hover {
     background: var(--button-primary-hover);
