--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  --background: #ffffff;
+  --background: #89CFF0;
   --foreground: #171717;
 }
 
@@ -14,11 +14,12 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: #89CFF0;
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: #89CFF0;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
