--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Lora:wght@400;700&display=swap');
+
 body {
   font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #faf3e0;
+  background-color: #D4C9BE;
   color: #333;
 }
 
@@ -16,7 +18,7 @@ body {
   min-height: 100vh;
   text-align: center;
   padding: 2rem;
-  background-color: #faf3e0;
+  background-color: #D4C9BE;
 }
 
 main {
@@ -24,21 +26,29 @@ main {
   max-width: 900px;
   margin: 0 auto;
   padding: 2rem;
-  background-color: #fff;
+  background-color: #F1EFEC;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-
 h1 {
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
-  font-weight: 700;
-  color: #1a1a1a;
-}
+    font-family: 'Merriweather', serif;
+    font-size: 3rem; 
+    font-weight: bold; 
+    text-transform: uppercase; 
+    letter-spacing: 2px;
+    color: #333; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); 
+    margin-top: 2rem; 
+    margin-bottom: 1.5rem; 
+    text-align: center; 
+    line-height: 1.2;
+  }
+  
 
 button, .btn {
-  background-color: #0051a8;
+  background-color: #2D336B;
+  text-decoration: none;
   color: white;
   padding: 0.75rem 1.5rem;
   border-radius: 8px;
@@ -52,12 +62,35 @@ button:hover, .btn:hover {
   background-color: #003f7d;
 }
 
+.back-button {
+    padding: 1rem 2rem;
+    font-size: 1rem;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease;
+  }
+  
+  .back-button:hover {
+    background-color: #003f7d; 
+  }
+
+  .back-button-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+  }
+  
 p {
+font-family: 'Merriweather', serif;
   margin-top: 1rem;
   line-height: 1.6;
 }
 
 h2 {
+font-family: 'Merriweather', serif;
   font-size: 1.8rem;
   color: #1a1a1a;
   margin-top: 1.5rem;
@@ -80,3 +113,18 @@ ul {
 li {
   margin-bottom: 0.5rem;
 }
+
+@media (max-width: 768px) {
+    h1.title {
+      font-size: 2.5rem; 
+    }
+  
+    h2 {
+      font-size: 1.6rem;
+    }
+  
+    p {
+      font-size: 1rem;
+    }
+  }
+  
